AM_CPPFLAGS = -I$(top_srcdir)/src/inc

noinst_LIBRARIES = libchem.a

libchem_a_FFLAGS = -Mdalign -fast

libchem_a_SOURCES = chemadv.F \
	chembudget.F \
	chemcheck.F \
	chemdiff.F \
	chemeddy.F \
	chememission.F \
	chemfilter.F \
	cheminit.F \
	chemlsodesrc.F \
	chemmass.F \
	chemmeta.F \
	chemmonth.F \
	chemoceanco2.F \
	chempdadv.F \
	chemprt.F \
	chemshap2d.F \
	chemstrat.F \
	chemtmp.F \
	chemtrop0.F \
	chemtrop.F 
